# pointCloudViewer

./: .gitignore  README.md
opengl-boilerplate/: CMakeLists.txt  SimpleDraw.glsl  SimpleDrawShaderMgr.cpp  main_old.cpp
opengl-boilerplate/include/: parser.h  renderer.h  windowMgr.h
opengl-boilerplate/src/: renderer.cpp  windowMgr.cpp
pointCloudViewer/: .CMakeListsOld.txt.un~  .main.cpp.un~  CMakeLists.txt  CMakeListsOld.txt  CMakePresets.json  README.md  SimpleDraw.glsl  main.cpp  main.cpp~
pointCloudViewer/include/: CplyParser.h  GlShaderMgr.h  camera.h  compute.h  gui.h  myParser.h  parser.h  parser2.h  plyParser.h  renderer.h  shaderMgr.h  windowMgr.h
pointCloudViewer/shaders/: fragment.fs  vertex.vs
pointCloudViewer/shaders/compute/: compute.comp  fragment.fs  render.comp  resolve.comp  vertex.vs
pointCloudViewer/shaders/nonCompute/: fragment.fs
pointCloudViewer/src/: .shaderMgr.cpp.swp  .shaderMgr.cpp.un~  .windowMgr.cpp.swp  CplyParser.cpp  GlShaderMgr.cpp  camera.cpp  compute.cpp  gui.cpp  myParser.cpp  parser.cpp  parser2.cpp  plyParser.cpp  renderer.cpp  shaderMgr.cpp~  windowMgr.cpp
